appId: com.x031pjs.jealthapp
name: "Force login"
---
- launchApp
- waitForAnimationToEnd:
    timeout: 10000

# dev menu 닫기
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
      - waitForAnimationToEnd:
          timeout: 5000

# 로그인 화면이면 로그인
- runFlow:
    when:
      visible: "이메일"
    commands:
      - tapOn: "email@example.com"
      - inputText: "test@test.com"
      - tapOn: "비밀번호 입력"
      - inputText: "12345678"
      - hideKeyboard
      - waitForAnimationToEnd:
          timeout: 3000
      - scrollUntilVisible:
          element:
            text: "로그인"
            index: 1
          direction: DOWN
      - tapOn:
          text: "로그인"
          index: 1
      - waitForAnimationToEnd:
          timeout: 15000
